# sna-data-pipeline

./: .gitignore  README.md  pyproject.toml
.docs/: artifact_detection_attempt.md  audit_pre_post_classification.md  context.md  handover.md  idea.md  phase_classify_speakers.md  technical_report_notes.md
src/: annotate_metadata.py  classify_speakers.py  cleanup_audio.py  ingest.py  normalize_audio.py  normalize_text.py  pre_classification_audit.py  rebuild_annotated.py  speaker_analysis.py  split_and_upload.py  upload_annotated.py
src/tests/: normalized.txt  test_normalize.py
src/tests/audio/: ear_test_matrix.csv  ear_test_matrix.xlsx  pull_samples.py  pull_speaker_samples.py  speaker_audit.py  test_curate.py  zip_speaker_samples.py  ~$ear_test_matrix.xlsx
src/tests/audio/audit_speaker/: README.md  audit_speaker_clusters.py  probe_gender_classifier.py  requirements.txt  train_gender_classifier.py
src/tests/audio/normalization/: README.md  mic_pop_audit.py  mic_pop_report.csv  mic_pop_summary.json  normalization_report.csv  normalization_summary.json  normalize_volume.py
src/tests/text/: test_normalize.py  unnormalized.txt
