[project]
name = "sna-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hdbscan>=0.8.41",
    "librosa>=0.11.0",
    "modal>=1.3.5",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyloudnorm>=0.2.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "setuptools>=82.0.1",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "torchaudio>=2.10.0",
    "tqdm>=4.67.3",
    "webrtcvad-wheels>=2.0.14",
]
